--- a/assets/css/style_main.css
+++ b/assets/css/style_main.css
@@ -3,6 +3,20 @@ body {
     color: #fff;
     background-color: #333;
     padding-bottom: 400px;
+
+    background: linear-gradient(270deg, rgba(166, 112, 81, 0.9) 16.45%, rgba(104, 105, 81, 0.85) 27.78%, #296251 64.26%);
+}
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+main {
+    background-image: url(../img/background.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: top;
 }
 
 header {
@@ -57,7 +71,7 @@ nav {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    height: 50vh;
+    height: 80vh;
 }
 
 .nome-empresa {
@@ -69,8 +83,9 @@ nav {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(89.88deg, rgba(166, 112, 81, 0.9) 16.45%, rgba(104, 105, 81, 0.85) 27.78%, #296251 64.26%);
-    height: 120vh;    
+    height: 100vh;   
+
+    position: relative;
 }
 
 .caixa-imagens {
@@ -79,22 +94,38 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 80%;
-    padding-bottom: 80px;
+    width: 65%;
+    border-radius: 15px;
+    padding: 50px 20px;
+    box-shadow: 0px 0px 12px #00000060;
+
+    position: absolute;
 }
 
 .titulo {
     font-size: 40px;
+    padding-bottom: 20px;
 }
 
 .subtitulo {
     font-size: 30px;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
 }
 
 .carrossel {
     display: flex;
     align-items: center;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+}
+
+.container img {
+    width: 75%;
+    border-radius: 15px;
+    box-shadow: 0px 0px 8px #00000060;
 }
 
 .seta-esquerda {
@@ -106,5 +137,3 @@ nav {
     padding-left: 30px;
     height: 50px;
 }
-
-
