--- a/assets/css/style_homes.css
+++ b/assets/css/style_homes.css
@@ -8,59 +8,16 @@ body {
     font-family: "Montserrat";
 }
 
-header {
-    background-color: #296251;
-    border-bottom: 1px solid white;
-    display: flex;
-}
-
-header p {
-    color: #fff;
-}
-
-.social-header img,
-.contact-header img {
-    height: 30px;
-}
-
-.social-header img {
-    padding-left: 20px;
-    padding-top: 5px;
-}
-
-.contact-header {
-    display: flex;
-    margin-left: auto;
-    align-items: center;
-}
-
-.contact-header p,
-.contact-header img{
-    margin-right: 10px;
-}
-
-.contact-header p {
-    font-size: 23px;
-    margin-right: 30px;
-
-}
-
-.fale-conosco {
-    word-spacing: 7px;
-}
-
 nav {
     display: flex;
-    border-bottom: 1px solid #000;
-    background-color: #fff;
-    align-items: center;
-    justify-content: center;
-    height: 7vh;
+    padding-top: 30px;
+    background-color: white;
+    padding-bottom: 30px;
 }
 
 nav img {
     width: 120px;
-    margin-left: 20px;
+    margin-left: 30px;
 }
 
 .secoes {
@@ -68,10 +25,11 @@ nav img {
 }
 
 .secoes a {
-    padding-right: 80px;
-    font-size: 30px;
+    padding-right: 40px;
+    font-size: 20px;
+    font-weight: bolder;
     text-decoration: none;
-    color: #000;
+    color: black;
 }
 
 .fotos { 
@@ -139,12 +97,12 @@ nav img {
 .local img {
     height: 4vh;
     padding-right: 1vh;
-    padding-bottom: 4vh;
+    padding-bottom: 7vh;
 }
 
 .informativos {
     display: flex;
-    width: 60vh;
+    width: 80vh;
     justify-content: space-between;
     padding-bottom: 10vh;
 }
@@ -156,6 +114,7 @@ nav img {
     background-color: #555;
     color: #fff;
     font-size: 20px;
+    
 }
 
 .texto-descritivo {
@@ -176,24 +135,29 @@ footer {
     background-color: #296251;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 0 300px;
-    height: 50vh;
-    font-size: 22px;
-    margin-top: 10vh;
-}
-
-footer p {
-    padding-bottom: 20px;
+    height: 20vh;
+    font-size: 2.2vh;
     color: #fff;
+    margin-top: 5vh;
+    padding-left: 10vh;
 }
 
-.contato-footer,
-.social-footer {
-    height: 120px;
+.informacoes-footer {
+    display: flex;
+    justify-content: space-between;
+    width: 140vh;
 }
 
+.text-empresa,
+.text-endereco,
 .text-social,
-.text-contact-footer {
-    font-size: 60px;
+.text-contato-footer {
+    font-size: 3vh;
+    padding-bottom: 1vh;
+    font-weight: bold;
+}
+
+footer img {
+    height: 7vh;
+    padding-left: 8vh;
 }
