--- a/assets/css/style_main.css
+++ b/assets/css/style_main.css
@@ -26,11 +26,11 @@ header {
 
 .social-header img,
 .contact-header img {
-    height: 25px;
+    height: 2.6vh;
 }
 
 .social-header img {
-    padding-left: 18px;
+    padding-left: 1.8vh;
 }
 
 .contact-header {
@@ -41,27 +41,23 @@ header {
 
 .contact-header p,
 .contact-header img{
-    margin-right: 10px;
+    margin-right: 1vh;
 }
 
 .contact-header p {
-    font-size: 23px;
-    margin-right: 30px;
+    font-size: 2.5vh;
+    margin-right: 3vh;
 
-}
-
-.fale-conosco {
-    word-spacing: 7px;
 }
 
 nav {
     display: flex;
-    padding-top: 30px;
+    padding-top: 3vh;
 }
 
 nav img {
-    width: 120px;
-    margin-left: 20px;
+    width: 12.5vh;
+    margin-left: 2vh;
 }
 
 .secoes {
@@ -69,11 +65,15 @@ nav img {
 }
 
 .secoes a {
-    padding-right: 80px;
-    font-size: 30px;
+    padding-right: 8vh;
+    font-size: 3vh;
     text-decoration: none;
     font-weight: bold;
     color: white;
+}
+
+.fale-conosco {
+    word-spacing: 0.7vh;
 }
 
 .main {
@@ -85,7 +85,7 @@ nav img {
 }
 
 .nome-empresa {
-    font-size: 60px;
+    font-size: 6.5vh;
     color: #fff;
 }
 
@@ -106,20 +106,20 @@ nav img {
     align-items: center;
     width: 65%;
     border-radius: 15px;
-    padding: 50px 20px;
+    padding: 5vh 2vh;
     box-shadow: 0px 0px 12px #00000060;
 
     position: absolute;
 }
 
 .titulo {
-    font-size: 40px;
-    padding-bottom: 20px;
+    font-size: 4vh;
+    padding-bottom: 2vh;
 }
 
 .subtitulo {
-    font-size: 30px;
-    padding-bottom: 40px;
+    font-size: 3vh;
+    padding-bottom: 4vh;
 }
 
 .carrossel {
@@ -139,13 +139,13 @@ nav img {
 }
 
 .seta-esquerda {
-    margin-right: 30px;
-    height: 50px;
+    margin-right: 3vh;
+    height: 5vh;
 }
 
 .seta-direita {
-    margin-left: 30px;
-    height: 50px;
+    margin-left: 3vh;
+    height: 5vh;
 }
 
 .container img {
@@ -168,31 +168,31 @@ nav img {
     color: #000;
     align-items: center;
     justify-content: space-between;
-    font-size: 40px;
+    font-size: 4vh;
 }
 
 .text-contact {
-    width: 500px;
+    width: 52vh;
     text-align: center;
 }
 
 .texto {
-    margin-left: 100px;
+    margin-left: 10vh;
 }
 
 .infos,
 .texto {
     background-color: rgba(3, 185, 3, 60%);
     border-radius: 20px;
-    padding: 10px 20px;
+    padding: 1vh 2vh;
 }
 
 .botao-fale-conosco {
-    margin-right: 120px;
-    padding: 30px 50px;
+    margin-right: 12vh;
+    padding: 3vh 5vh;
     border-radius: 30px;
     background-color: rgba(3, 185, 3, 60%);
-    font-size: 20px;
+    font-size: 2vh;
     box-shadow: 0px 0px 8px #00000060;
 }
 
@@ -205,22 +205,28 @@ footer {
     background-color: #296251;
     display: flex;
     align-items: center;
+    height: 20vh;
+    font-size: 2.2vh;
+    color: #fff;
+    padding-left: 10vh;
+}
+
+.informacoes-footer {
+    display: flex;
     justify-content: space-between;
-    padding: 0 300px;
-    height: 50vh;
-    font-size: 22px;
+    width: 140vh;
 }
 
-footer p {
-    padding-bottom: 20px;
-}
-
-.contato-footer,
-.social-footer {
-    height: 120px;
-}
-
+.text-empresa,
+.text-endereco,
 .text-social,
-.text-contact-footer {
-    font-size: 60px;
+.text-contato-footer {
+    font-size: 3vh;
+    padding-bottom: 1vh;
+    font-weight: bold;
+}
+
+footer img {
+    height: 7vh;
+    padding-left: 8vh;
 }
