--- a/assets/css/style_homes.css
+++ b/assets/css/style_homes.css
@@ -66,7 +66,12 @@ nav img {
 }
 
 .cama-homes {
+    display: none;
     width: 80vh;
+}
+
+.cama-homes.imagemAtiva {
+    display: block; 
 }
 
 .info {
