--- a/assets/css/style_contact.css
+++ b/assets/css/style_contact.css
@@ -36,15 +36,13 @@ nav img {
 .main{
     background-image: url(../img/background-contact.png);
     background-repeat: no-repeat;
-    background-size: 250vh;
-    height: 40vh;
-    width: 100%;
-    background-position: center -1050px;
+    background-size: 220vh;
+    height: 70vh;
+    background-position: center -500px;
 }
 
 .contact{
     background-color: #296251;
-    height: 30vh;
 
     display: flex;
     color: #fff;
@@ -98,7 +96,6 @@ nav img {
 
 .social{
     background-color: white;
-    height: 35vh;
     gap: 30px;
     padding: 40px;
 
@@ -108,18 +105,18 @@ nav img {
 }
 
 .text-social{
-    font-weight: lighter;
+    font-weight: 300;
     text-align: center;
     font-size: 30px;
     width: 1000px;
     margin: auto;
-    
+    margin-top: 50px;
 }
 
 .redes{
     display: flex;
     justify-content: center;
-    margin-top: 120px;
+    margin: 80px 0px 40px 0px;
 }
 
 .endereco, .instagram, .facebook{
