--- a/assets/css/style_homes.css
+++ b/assets/css/style_homes.css
@@ -26,7 +26,7 @@ nav img {
 
 .secoes a {
     padding-right: 40px;
-    font-size: 20px;
+    font-size: 1.5rem;
     font-weight: bolder;
     text-decoration: none;
     color: black;
@@ -82,12 +82,12 @@ nav img {
 }
 
 .info h1 {
-    font-size: 5vh;
+    font-size: 3rem;
     padding-bottom: 2vh;
 }
 
 .info h2 {
-    font-size: 5vh;
+    font-size: 2.5rem;
     padding-bottom: 3vh;
 }
 
@@ -96,7 +96,7 @@ nav img {
 }
 
 .local p {
-    font-size: 4vh;
+    font-size: 2rem;
 }
 
 .local img {
@@ -118,7 +118,7 @@ nav img {
     border-radius: 15px;
     background-color: #555;
     color: #fff;
-    font-size: 20px;
+    font-size: 1.2rem;
     
 }
 
@@ -132,7 +132,7 @@ nav img {
 }
 
 .texto-descritivo p {
-    font-size: 2vh;
+    font-size: 1.2rem;
     padding-bottom: 2vh;
 }
 
@@ -141,7 +141,7 @@ footer {
     display: flex;
     align-items: center;
     height: 20vh;
-    font-size: 2.2vh;
+    font-size: 1rem;
     color: #fff;
     margin-top: 5vh;
     padding-left: 10vh;
@@ -149,7 +149,6 @@ footer {
 
 .informacoes-footer {
     display: flex;
-    justify-content: space-between;
     width: 140vh;
 }
 
@@ -157,9 +156,10 @@ footer {
 .text-endereco,
 .text-social,
 .text-contato-footer {
-    font-size: 3vh;
+    font-size: 2rem;
     padding-bottom: 1vh;
     font-weight: bold;
+    padding-left: 1vh;
 }
 
 footer img {
